--- a/contact.html
+++ b/contact.html
@@ -6,5 +6,23 @@
   </head>
   <body>
     <a href="tel:0742636425">press here to call me</a>
+    <hr>
+    <form class="" action="mailto:stefan_campan@yahoo.com" method="post">
+      <label>Your name</label>
+      <input type="text" name="y name" value=""><br>
+      <label>Your email</label>
+      <input type="email" name="y email" value="">
+
+      <br>
+      <label>Do you want to become a programmer</label>
+      <input type="checkbox" name=" test" value="">
+      <br>
+      <label>Password</label>
+      <input type="password" name="pws" value="">
+      <br>
+      <textarea name="name" rows="10" cols="30"></textarea>
+      <br>
+      <input type="submit" name="submit" value="">
+    </form>
   </body>
 </html>
