--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
 </head>
 
 <body>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Connecticut_ComiCONN_Superhero_Mascot..jpg" alt="stefan profile picture">
-  <img src="Stefan.jpg" alt="stefan profile picture">
-  <h1>Cimpan Stefan</h1>
-  <p><em>Founder and <strong>CEO to <a href="https://alphasoftxinv.com/dist/index.html">alphasoftxinv.com</a> </strong></em></p>
-  <p>I am a fullstack web developer and I 💚 business</p>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="Stefan.jpg" width="50%" height="50%" alt="stefan profile picture"></td>
+      <td><h1>Cimpan Stefan</h1>
+      <p><em>Founder and <strong>CEO to <a href="https://alphasoftxinv.com/dist/index.html">alphasoftxinv.com</a> </strong></em></p>
+      <p>I am a fullstack web developer and I 💚 business</p></td>
+    </tr>
+  </table>
+
+  <table cellspacing="20">
+    <tr>
+      <td><img src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Connecticut_ComiCONN_Superhero_Mascot..jpg" alt="stefan profile picture" width="50%" height="50%"></td>
+      <td><h1>I`m a superhero</h1>
+      <p><em>Founder and <strong>CEO to <a href="https://alphasoftxinv.com/dist/index.html">alphasoftxinv.com</a> </strong></em></p>
+      <p>I am a fullstack web developer and I 💚 business</p></td>
+    </tr>
+  </table>
+
+
+
 
   <hr>
   <h3>Books and company</h3>
@@ -31,11 +46,55 @@
     <li>UTCN CS</li>
   </ol>
   <hr>
+  <h3>Work experience</h3>
+  <table>
+    <thead>
+      <th>Dates</th>
+      <th>Work</th>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>2010-2013</td>
+        <td>CEO at alphasoftxinv</td>
+      </tr>
+      <tr>
+        <td>2012</td>
+        <td>app de nutritie</td>
+      </tr>
+    </tbody>
+
+    <tfoot>
+
+    </tfoot>
+
+<table cellspacing="10" border="10">
+  <tr>
+    <td>SEO</td>
+    <td>⭐⭐⭐⭐⭐</td>
+    <td>JS</td>
+    <td>⭐⭐⭐⭐⭐</td>
+  </tr>
+
+  <tr>
+    <td>HTML</td>
+    <td>⭐⭐⭐⭐⭐</td>
+    <td>CSS</td>
+    <td>⭐⭐⭐⭐⭐</td>
+  </tr>
+
+</table>
+
+  </table>
+
+  <hr>
+
   <h3>Contact</h3>
   <ul>
     <li> <a href="hobbies.html">Hobbies</a></li>
     <li> <a href="contact.html">Contact me bb</a> </li>
   </ul>
+  <hr>
 </body>
 
 </html>
